# Chinese-Rust-Syntax-Design-and-Transpilation-Tool

./: README.md
ZhongComputeRust/: Cargo.toml  Compute
ZhongComputeRust/crates/cn_cli/: Cargo.toml
ZhongComputeRust/crates/cn_cli/src/: lib.rs  main.rs
ZhongComputeRust/crates/cn_codegen/: Cargo.toml
ZhongComputeRust/crates/cn_codegen/src/: lib.rs
ZhongComputeRust/crates/cn_config/: Cargo.toml
ZhongComputeRust/crates/cn_config/src/: builtin_mappings.rs  config_loader.rs  hot_reloader.rs  lib.rs  mapping_query.rs  mapping_registry.rs  version_manager.rs
ZhongComputeRust/crates/cn_diag/: Cargo.toml
ZhongComputeRust/crates/cn_diag/src/: lib.rs
ZhongComputeRust/crates/cn_incremental/: Cargo.toml
ZhongComputeRust/crates/cn_incremental/src/: lib.rs
ZhongComputeRust/crates/cn_lexer/: Cargo.toml
ZhongComputeRust/crates/cn_lexer/src/: lib.rs
ZhongComputeRust/crates/cn_lsp/: Cargo.toml
ZhongComputeRust/crates/cn_lsp/src/: lib.rs
ZhongComputeRust/crates/cn_mapper/: Cargo.toml
ZhongComputeRust/crates/cn_mapper/src/: lib.rs
ZhongComputeRust/crates/cn_migrator/: Cargo.toml
ZhongComputeRust/crates/cn_migrator/src/: lib.rs
ZhongComputeRust/crates/cn_parser/: Cargo.toml
ZhongComputeRust/crates/cn_parser/src/: lib.rs
ZhongComputeRust/crates/cn_sandbox/: Cargo.toml
ZhongComputeRust/crates/cn_sandbox/src/: lib.rs
ZhongComputeRust/crates/cn_sugar/: Cargo.toml
ZhongComputeRust/crates/cn_sugar/src/: lib.rs
ZhongComputeRust/crates/cn_types/: Cargo.toml
ZhongComputeRust/crates/cn_types/src/: ast_node_type.rs  cache_types.rs  diagnostic.rs  error_code.rs  lib.rs  mapping_models.rs  mapping_registry.rs  mapping_type.rs  pipeline_types.rs  source_location.rs  source_map.rs  sugar_models.rs  sugar_types.rs  token_type.rs
ZhongComputeRust/crates/cn_verify/: Cargo.toml
ZhongComputeRust/crates/cn_verify/src/: lib.rs
