[package]
name = "cn_codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cn_types = { path = "../cn_types" }
cn_config = { path = "../cn_config" }
cn_mapper = { path = "../cn_mapper" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }