[package]
name = "cn_diag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cn_types = { path = "../cn_types" }
cn_config = { path = "../cn_config" }
cn_codegen = { path = "../cn_codegen" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }