[package]
name = "cn_lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cn_types = { path = "../cn_types" }
cn_config = { path = "../cn_config" }
cn_incremental = { path = "../cn_incremental" }
cn_diag = { path = "../cn_diag" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }