[package]
name = "cn_mapper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cn_types = { path = "../cn_types" }
cn_config = { path = "../cn_config" }
cn_parser = { path = "../cn_parser" }
cn_sugar = { path = "../cn_sugar" }
thiserror = { workspace = true }