[package]
name = "cn_sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cn_types = { path = "../cn_types" }
cn_config = { path = "../cn_config" }
cn_mapper = { path = "../cn_mapper" }
cn_codegen = { path = "../cn_codegen" }
thiserror = { workspace = true }